14 - Comments API (#14)
* comments - get, create and patch (content)

* comments - patch

* comments - delete

* comments - open api
