# controller/CommentController.php
@@ -3,47 +3,68 @@
 //TODO: requires changes
 class CommentController extends BaseController
 {
+    public function hasComment($id, $userId): bool
+    {
+        $model = new CommentModel();
+
+        $response = $model->getComment($id, $userId);
+
+        return (count($response) > 0);
+    }
+
     public function get()
     {
-        $strErrorDesc = '';
-        $responseData = "";
         $requestMethod = $_SERVER["REQUEST_METHOD"];
+        $uri = parse_url($_SERVER['REQUEST_URI'], PHP_URL_PATH);
+        $uri = explode( '/', $uri );
 
-        if (strtoupper($requestMethod) !== 'GET') {
-            $this->sendOutput(
-                json_encode(self::RESPONSE_DATA_DECODED_422),
-                self::HEADERS_422
-            );
+        if (strtoupper($requestMethod) === 'GET') {
+            $this->getCommentsList();
 
             return;
         }
 
+        if (strtoupper($requestMethod) === 'POST') {
+            $this->createComment();
+
+            return;
+        }
+
+        if (strtoupper($requestMethod) === 'PATCH') {
+            $this->updateComment();
+
+            return;
+        }
+
+        if (strtoupper($requestMethod) === 'DELETE') {
+            $this->deleteComment();
+
+            return;
+        }
+
+        $this->sendStatusCode422();
+    }
+
+    public function getCommentsList()
+    {
         $arrQueryStringParams = $this->getQueryStringParams();
 
+        if (!isset($arrQueryStringParams['postId'])) {
+            $this->sendStatusCode422('No post id');
+
+            return;
+        }
+
+        ['postId' => $postId] = $arrQueryStringParams;
+
         try {
-            if (!isset($arrQueryStringParams['postId']) && !$arrQueryStringParams['postId']) {
-                throw new Error('No post id');
-            }
-
-            if (!isset($arrQueryStringParams['rowCount']) && !$arrQueryStringParams['rowCount']) {
-                throw new Error('No rowCount');
-            }
-
-            if (!isset($arrQueryStringParams['offset']) && !$arrQueryStringParams['offset']) {
-                throw new Error('No offset');
-            }
-
             $model = new CommentModel();
 
-            [
-                'postId' => $postId,
-                'rowCount' => $rowCount,
-                'offset' => $offset
-            ] = $arrQueryStringParams;
+            $response = $model->getCommentsList($postId);
 
-            $response = $model->getCommentsList($postId, $rowCount, $offset);
+            $normalizedData = $this->restoreInitialData($response);
 
-            $responseData = json_encode($response);
+            $responseData = json_encode($normalizedData[0]);
             $httpResponseHeader = self::HEADERS_200;
         }
         catch (Error $e) {
@@ -57,37 +78,13 @@ class CommentController extends BaseController
         }
     }
 
-    public function create()
+    public function createComment()
     {
         $responseData = "";
         $httpResponseHeader = "";
-        $requestMethod = $_SERVER["REQUEST_METHOD"];
 
-        if (strtoupper($requestMethod) !== 'POST') {
-            $this->sendOutput(
-                json_encode(self::RESPONSE_DATA_DECODED_422),
-                self::HEADERS_422
-            );
-
-            return;
-        }
-
-        $expectedPostVariables = [
-            $_POST['userId'],
-            $_POST['content'],
-            $_POST['postId']
-        ];
-
-        foreach ($expectedPostVariables as $value) {
-            if (!isset($value)) {
-                $this->sendOutput(
-                    json_encode(self::RESPONSE_DATA_DECODED_422),
-                    self::HEADERS_422
-                );
-
-                return;
-            }
-        }
+        $uri = parse_url($_SERVER['REQUEST_URI'], PHP_URL_PATH);
+        $uri = explode( '/', $uri );
 
         try {
             $model = new CommentModel();
@@ -95,24 +92,28 @@ class CommentController extends BaseController
             $userController = new UserController();
             $postController = new PostController();
 
-            $userId = $_POST['userId'];
-            $content = $_POST['content'];
-            $postId = $_POST['postId'];
+            $inputData = file_get_contents('php://input');
+            $decodedData = json_decode($inputData);
+
+            $userId = $decodedData->userId ?? '';
+            $content = $decodedData->content ?? '';
+            $postId = $decodedData->postId ?? '';
+            $parentId = $decodedData->parentId ?? 0;
+
+            if (
+                !(strlen($userId) > 0)
+                || !(strlen($content) > 0)
+                || !(strlen($postId) > 0)
+            ) {
+                $this->sendStatusCode422();
+
+                return;
+            }
 
             $hasUser = $userController->hasUser($userId);
-
-            if (!$hasUser) {
-                $this->sendOutput(
-                    json_encode(self::RESPONSE_DATA_DECODED_422),
-                    self::HEADERS_422
-                );
-
-                return;
-            }
-
             $hasPost = $postController->hasPost($postId);
 
-            if (!$hasPost) {
+            if (!$hasUser || !$hasPost) {
                 $this->sendOutput(
                     json_encode(self::RESPONSE_DATA_DECODED_422),
                     self::HEADERS_422
@@ -121,10 +122,13 @@ class CommentController extends BaseController
                 return;
             }
 
-            $response = $model->createComment($userId, $content, $postId);
+            $response = $model->createComment($userId, $content, $postId, $parentId);
+            $insertId = $response['insert_id'];
 
-            $responseData = json_encode($response);
-            $httpResponseHeader = self::HEADERS_200;
+            $output = $model->getComment($insertId);
+
+            $responseData = json_encode($output[0]);
+            $httpResponseHeader = $this->getStatusHeader201($uri[3], $insertId);
         }
         catch (Error $e) {
             $strErrorDesc = $e->getMessage() . 'Something went wrong! Please contact support.';
@@ -132,6 +136,234 @@ class CommentController extends BaseController
             $responseData = json_encode(['error' => $strErrorDesc]);
             $httpResponseHeader = self::HEADERS_500;
 
+        }
+        finally {
+            $this->sendOutput($responseData, $httpResponseHeader);
+        }
+    }
+
+    public function updateComment()
+    {
+        $responseData = "";
+        $httpResponseHeader = "";
+
+        $uri = parse_url($_SERVER['REQUEST_URI'], PHP_URL_PATH);
+        $uri = explode( '/', $uri );
+
+        if (!array_key_exists(4, $uri)) {
+            $this->sendStatusCode422();
+
+            return;
+        }
+
+        try {
+            $model = new CommentModel();
+
+            $id = $uri[4];
+
+            $inputData = file_get_contents('php://input');
+            $decodedData = json_decode($inputData);
+
+            $userId = $decodedData->userId ?? '';
+            $content = $decodedData->content ?? '';
+            $likedByUserId = $decodedData->likedByUserId ?? '';
+            $dislikedByUserId = $decodedData->dislikedByUserId ?? '';
+
+            if (
+                !(strlen($id) > 0)
+                || (
+                    !(strlen($content) > 0) &&
+                    !(strlen($likedByUserId) > 0) &&
+                    !(strlen($dislikedByUserId) > 0)
+                )
+            ) {
+                $this->sendStatusCode422();
+
+                return;
+            }
+
+            if (strlen($content) > 0 && strlen($userId) > 0) {
+                $isAuthor = $this->hasComment($id, $userId);
+
+                if (!$isAuthor) {
+                    $this->sendStatusCode422();
+
+                    return;
+                }
+
+                $model->updateCommentContent($content, $userId, $id);
+
+                $output = $model->getComment($id);
+
+                $responseData = json_encode($output[0]);
+                $httpResponseHeader = $this->getStatusHeader201($uri[3], $id);
+
+                return;
+            }
+
+            if (strlen($likedByUserId) > 0) {
+                $response = $model->getComment($id);
+
+                $normalizedData = $this->restoreInitialData($response);
+
+                $normalizedData = $normalizedData[0];
+                $likedByList = $normalizedData['likedBy'];
+                $dislikedByList = $normalizedData['dislikedBy'];
+
+                if (in_array($likedByUserId, $likedByList)) {
+                    $this->sendStatusCode422();
+
+                    return;
+                }
+
+                $isCurrentlyCommentDisliked = in_array($likedByUserId, $dislikedByList);
+
+                $newLikedByList = [...$likedByList, $likedByUserId];
+                $newDislikedByList = $isCurrentlyCommentDisliked
+                    ? array_filter($dislikedByList, function ($value) use ($likedByUserId) {
+                        return $value !== $likedByUserId;
+                    })
+                    : [];
+
+                $assocLikedByList = [];
+                $assocDislikedByList = [];
+
+                foreach ($newLikedByList as $value) {
+                    $assocLikedByList[] = ["likedBy" => $value];
+                }
+
+                foreach ($newDislikedByList as $value) {
+                    $assocDislikedByList[] = ["dislikedBy" => $value];
+                }
+
+                if (count($assocDislikedByList) < 1) {
+                    $assocDislikedByList = '[]';
+                }
+
+                $model->updateCommentLikesList($assocLikedByList, $assocDislikedByList, $id);
+
+                $output = $model->getComment($id);
+
+                $outputData = $this->restoreInitialData($output);
+
+                $responseData = json_encode($outputData[0]);
+                $httpResponseHeader = $this->getStatusHeader201($uri[3], $id);
+
+                return;
+            }
+
+            if (strlen($dislikedByUserId) > 0) {
+                $response = $model->getComment($id);
+
+                $normalizedData = $this->restoreInitialData($response);
+
+                $normalizedData = $normalizedData[0];
+                $likedByList = $normalizedData['likedBy'];
+                $dislikedByList = $normalizedData['dislikedBy'];
+
+                if (in_array($dislikedByUserId, $dislikedByList)) {
+                    $this->sendStatusCode422();
+
+                    return;
+                }
+
+                $isCurrentlyCommentLiked = in_array($dislikedByUserId, $likedByList);
+
+                $newDislikedByList = [...$dislikedByList, $dislikedByUserId];
+                $newLikedByList = $isCurrentlyCommentLiked
+                    ? array_filter($likedByList, function ($value) use ($dislikedByUserId) {
+                        return $value !== $dislikedByUserId;
+                    })
+                    : [];
+
+                $assocLikedByList = [];
+                $assocDislikedByList = [];
+
+                foreach ($newLikedByList as $value) {
+                    $assocLikedByList[] = ["likedBy" => $value];
+                }
+
+                foreach ($newDislikedByList as $value) {
+                    $assocDislikedByList[] = ["dislikedBy" => $value];
+                }
+
+                if (count($assocLikedByList) < 1) {
+                    $assocLikedByList = '[]';
+                }
+
+                $model->updateCommentLikesList($assocLikedByList, $assocDislikedByList, $id);
+
+                $output = $model->getComment($id);
+
+                $outputData = $this->restoreInitialData($output);
+
+                $responseData = json_encode($outputData[0]);
+                $httpResponseHeader = $this->getStatusHeader201($uri[3], $id);
+
+                return;
+            }
+
+            $this->sendStatusCode422();
+        }
+        catch (Error $e) {
+            $strErrorDesc = $e->getMessage() . 'Something went wrong! Please contact support.';
+
+            $responseData = json_encode(['error' => $strErrorDesc]);
+            $httpResponseHeader = self::HEADERS_500;
+        }
+        finally {
+            $this->sendOutput($responseData, $httpResponseHeader);
+        }
+    }
+
+    public function deleteComment()
+    {
+        $responseData = "";
+        $httpResponseHeader = "";
+
+        $uri = parse_url($_SERVER['REQUEST_URI'], PHP_URL_PATH);
+        $uri = explode( '/', $uri );
+
+        if (!array_key_exists(4, $uri)) {
+            $this->sendStatusCode422();
+
+            return;
+        }
+
+        try {
+            $model = new CommentModel();
+
+            $id = $uri[4];
+
+            $inputData = file_get_contents('php://input');
+            $decodedData = json_decode($inputData);
+
+            $userId = $decodedData->userId ?? '';
+
+            if (!(strlen($id) > 0)) {
+                $this->sendStatusCode422();
+
+                return;
+            }
+
+            $isAuthor = $this->hasComment($id, $userId);
+
+            if (!$isAuthor) {
+                $this->sendStatusCode422();
+
+                return;
+            }
+
+            $model->deleteComment($id, $userId);
+
+            $responseData = "Comment has been deleted";
+            $httpResponseHeader = $this->getStatusHeader201($uri[3], $id);
+        }
+        catch (Error $e) {
+            $strErrorDesc = $e->getMessage() . 'Something went wrong! Please contact support.';
+
+            $responseData = json_encode(['error' => $strErrorDesc]);
+            $httpResponseHeader = self::HEADERS_500;
         }
         finally {
             $this->sendOutput($responseData, $httpResponseHeader);
